--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "填上一句你想填的话，在index.html中更改"
+description: "一见如故容易，难得是来日方长的陪伴。"
 ---
 
 {% for post in paginator.posts %}
